@@ -1,3 +1,9 @@
+2007-02-14  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-method.c: (fill_info_struct), (do_read_directory): populate the
+	VFS file info fields properly so that nautilus shows e.g. read-only
+	emblems in themes:// (fixes bug #145175)
+
 2007-02-07  Jens Granseuer  <jensgr@gmx.net>
 
 	Based on a patch by: Chistian Persch <chpe@svn.gnome.org>
